clusters/production/apps/observability/namespace-observability-production.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: observability-production
  labels:
    app.kubernetes.io/part-of: production
    # Triggers cluster-wide Kyverno ClusterPolicy clone-pbs-encryption-keyfile
    # to clone the keyfile Secret from platform-production into this namespace.
    pbs.wsh.no/encryption-keyfile: "true"
